WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274391
[WGSL] Type checker does not handle shadowing of overloaded built-ins correctly
https://bugs.webkit.org/show_bug.cgi?id=274391
Summary
[WGSL] Type checker does not handle shadowing of overloaded built-ins correctly
Tadeu Zagallo
Reported
2024-05-20 08:08:55 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-05-20 08:14:00 PDT
rdar://128202008
Tadeu Zagallo
Comment 2
2024-05-20 08:19:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28790
EWS
Comment 3
2024-05-21 04:59:49 PDT
Committed
279053@main
(7db8345cbe6b): <
https://commits.webkit.org/279053@main
> Reviewed commits have been landed. Closing PR #28790 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug