[WGSL] Type checker does not handle shadowing of overloaded built-ins correctly https://bugs.webkit.org/show_bug.cgi?id=274391 rdar://128202008

Reviewed by Mike Wyrzykowski.

The type checker incorrectly looked up the built-in definition even there was another
definition shadowing it.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/invalid/function-call.wgsl:

Canonical link: https://commits.webkit.org/279053@main